# Eng

./: CMakeLists.txt  ViewerBase.cpp
.github/workflows/: ci.yml  release.yml  schedule.yml
first-party/Gui/: .gitrepo  BitmapFont.cpp  BitmapFont.h  ButtonImage.cpp  ButtonImage.h  Image.cpp  Image.h  Image9Patch.cpp  Image9Patch.h  Renderer.cpp  Renderer.h  RendererGL.cpp  RendererVK.cpp
first-party/Net/: .gitrepo
first-party/Phy/: .gitrepo
first-party/Ren/: .gitrepo  AccStructure.cpp  AccStructure.h  AccStructureVK.cpp  Anim.cpp  Anim.h  ApiContext.h  Bindless.h  Buffer.cpp  Buffer.h  BufferGL.cpp  BufferVK.cpp  CMakeLists.txt  Camera.h  Common.h  Context.cpp  Context.h  ContextGL.cpp  ContextVK.cpp  DebugMarker.h  DebugMarkerGL.cpp  DebugMarkerVK.cpp  DescriptorPool.h  DescriptorPoolGL.cpp  DescriptorPoolVK.cpp  DrawCall.h  DrawCallGL.cpp  DrawCallVK.cpp  Fence.h  FenceVK.cpp  Framebuffer.h  FramebufferGL.cpp  FramebufferVK.cpp  Fwd.h  GL.h  GLCtx.h  GLExt.cpp  HashMap32.h  Image.cpp  Image.h  (+60 more)
first-party/Ren/.github/workflows/: ci.yml
first-party/Ren/Gl/: BufferGL.cpp  ContextGL.cpp  DebugMarkerGL.cpp  DescriptorPoolGL.cpp  DrawCallGL.cpp  FenceGL.cpp  FramebufferGL.cpp  GL.h  GLCtx.cpp  GLCtx.h  GLExt.cpp  ImageAtlasGL.cpp  ImageGL.cpp  ImageGL.h  MemoryAllocatorGL.cpp  PipelineGL.cpp  ProgramGL.cpp  ProgramGL.h  RastStateGL.cpp  RenderPassGL.cpp  ResourceGL.cpp  SamplerGL.cpp  SamplerGL.h  ShaderGL.cpp  ShaderGL.h  VertexInputGL.cpp
first-party/Ren/Vk/: AccStructureVK.cpp  BufferVK.cpp  ContextVK.cpp  DebugMarkerVK.cpp  DescriptorPoolVK.cpp  DrawCallVK.cpp  FenceVK.cpp  FramebufferVK.cpp  ImageAtlasVK.cpp  ImageVK.cpp  ImageVK.h  MemoryAllocatorVK.cpp  PipelineVK.cpp  ProgramVK.cpp  ProgramVK.h  RenderPassVK.cpp  ResourceVK.cpp  SamplerVK.cpp  SamplerVK.h  ShaderVK.cpp  ShaderVK.h  VKCtx.cpp  VKCtx.h  VertexInputVK.cpp
first-party/Ren/math/: Mat.h  Quat.h
first-party/Ren/tests/: CMakeLists.txt  main.cpp  test_anim.cpp  test_buffer.cpp  test_common.h  test_freelist_alloc.cpp  test_hashmap.cpp  test_hashset.cpp  test_material.cpp  test_math.cpp  test_mesh.cpp  test_programGL.cpp  test_programVK.cpp  test_small_vector.cpp  test_span.cpp  test_sparse_array.cpp  test_sparse_storage.cpp  test_storage.cpp  test_string.cpp  test_utils.cpp
first-party/Ren/utils/: AlignedAlloc.h  CPUFeatures.cpp  FreelistAlloc.cpp  SparseArray.h  SparseStorage.h  Storage.h  Utils.cpp  Utils.h
first-party/Snd/: .gitrepo
first-party/Sys/: .gitrepo  CMakeLists.txt  Json.cpp  _CustomTypes.natvis
first-party/glslx/: .gitrepo  Fixup.cpp  Preprocessor.cpp  Prune.cpp  Serialize.cpp  WriterGLSL.cpp  WriterGLSL.h  WriterHLSL.cpp
input/: InputManager.h
renderer/: BlueNoise_Heitz.h  BlueNoise_Wolfe.cpp  BlueNoise_Wolfe.h  PrimDraw.cpp  PrimDraw.h  PrimDrawGL.cpp  PrimDrawVK.cpp  Renderer.cpp  Renderer.h  Renderer_Common.cpp  Renderer_DrawList.cpp  Renderer_DrawList.h  Renderer_Frontend.cpp  Renderer_GICache.cpp  Renderer_GIDiffuse.cpp  Renderer_GISpecular.cpp  Renderer_Gen.cpp  Renderer_Passes.cpp  Renderer_Postprocess.cpp  Renderer_Structs.h  Renderer_SunShadows.cpp  Renderer_Transparency.cpp  Renderer_Volumetrics.cpp
renderer/executors/: ExBuildAccStructures.cpp  ExBuildAccStructures.h  ExBuildAccStructuresVK.cpp  ExDebugOIT.cpp  ExDebugOIT.h  ExDebugProbes.cpp  ExDebugProbes.h  ExDebugRT.cpp  ExDebugRT.h  ExDebugRT_VK.cpp  ExDepthFill.cpp  ExDepthFill.h  ExDepthFillGL.cpp  ExDepthFillVK.cpp  ExDepthHierarchy.cpp  ExDepthHierarchy.h  ExDepthHierarchyGL.cpp  ExDepthHierarchyVK.cpp  ExEmissive.cpp  ExEmissive.h  ExEmissiveGL.cpp  ExEmissiveVK.cpp  ExGBufferFill.cpp  ExGBufferFill.h  ExGBufferFillGL.cpp  ExGBufferFillVK.cpp  ExOITBlendLayer.cpp  ExOITBlendLayer.h  ExOITBlendLayerGL.cpp  ExOITBlendLayerVK.cpp  ExOITDepthPeel.cpp  ExOITDepthPeel.h  ExOITDepthPeelGL.cpp  ExOITDepthPeelVK.cpp  ExOITScheduleRays.cpp  ExOITScheduleRays.h  ExOITScheduleRaysGL.cpp  ExOITScheduleRaysVK.cpp  ExOpaque.cpp  ExOpaque.h  (+55 more)
renderer/framegraph/: FgBuilder.cpp  FgBuilder.h  FgBuilderVK.cpp  FgNode.cpp  FgNode.h  FgResource.h
renderer/shaders/: blit_tsr.frag.glsl  gi_classify.comp.glsl  motion_blur_interface.h  oit_schedule_rays.frag.glsl  oit_schedule_rays_interface.h  prepare_disocclusion.comp.glsl  probe_sample.comp.glsl  probe_sample_interface.h  rt_common.glsl  rt_debug.rchit.glsl  rt_debug_swrt.comp.glsl  rt_diffuse_classify.comp.glsl  rt_diffuse_classify_interface.h  rt_diffuse_filter.comp.glsl  rt_diffuse_filter_interface.h  rt_diffuse_hwrt.comp.glsl  rt_diffuse_interface.h  rt_diffuse_reproject.comp.glsl  rt_diffuse_reproject_interface.h  rt_diffuse_shade.comp.glsl  rt_diffuse_stabilization.comp.glsl  rt_diffuse_stabilization_interface.h  rt_diffuse_swrt.comp.glsl  rt_diffuse_temporal.comp.glsl  rt_diffuse_temporal_interface.h  rt_diffuse_trace_ss.comp.glsl  rt_diffuse_trace_ss_interface.h  rt_diffuse_write_indirect_args.comp.glsl  rt_diffuse_write_indirect_args_interface.h  rt_gi_cache_hwrt.comp.glsl  rt_gi_cache_swrt.comp.glsl  rt_shadow_classify_tiles.comp.glsl  rt_shadow_filter.comp.glsl  rt_specular_classify.comp.glsl  rt_specular_classify_interface.h  rt_specular_filter.comp.glsl  rt_specular_filter_interface.h  rt_specular_hwrt.comp.glsl  rt_specular_inline_hwrt.comp.glsl  rt_specular_inline_swrt.comp.glsl  (+21 more)
scene/: Atmosphere.cpp  Atmosphere.h  PhysicsManager.cpp  PhysicsManager.h  SceneData.cpp  SceneData.h  SceneManager.cpp  SceneManager.h  SceneManagerGL.cpp  SceneManagerVK.cpp  SceneManager_ASS.cpp  SceneManager_ASS_Font.cpp  SceneManager_ASS_Tex.cpp  SceneManager_BVH.cpp  SceneManager_Tex.cpp  TexUpdateFileBuf.h
scene/components/: AccStructure.cpp  AccStructure.h  AnimState.h  Decal.h  Drawable.cpp  Drawable.h  LightProbe.h  LightSource.h  Lightmap.h  Occluder.h  (+2 more)
tests/: test_materials.cpp  test_motion_blur.cpp  test_scene.cpp  test_scene.h  test_shading.cpp  test_upscaling.cpp  test_volumetrics.cpp
textures/: 3dnoise.tex
utils/: FreeCamController.h  Random.h  ScriptedSequence.cpp  ScriptedSequence.h  ShaderLoader.cpp  ShaderLoader.h
widgets/: CmdlineUI.h  DebugFrameUI.cpp
(+14 files in other folders)
